change variables style

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,7 +10,6 @@
           <h5 class="site-footer-widget-title">{{ .title }}</h5>
           <p class="site-footer-widget-description">
             {{ .address | safeHTML }}
-            <br>
             <a href="tel:{{ .phone }}">{{ .phone }}</a>
             <br>
             <a href="mailto:{{ .email }}">{{ .email }}</a>
@@ -56,9 +55,9 @@
         <a href="#top" class="site-footer-widget-top">
           <img src="{{ "images/to-top.svg" | absURL }}" alt="back-to-top">
           <p>
-            I want to 
+            Хочу еще 
             <br>
-            visit again
+            посмотреть
           </p>
         </a>
       </div>
