--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,11 +2,11 @@
 
 {{ partial "hero.html" . }}
 
-{{ partial "counter.html" . }}
+<!-- {{ partial "counter.html" . }} -->
 
 {{ partial "portfolio.html" . }}
 
-{{ partial "testimonial.html" . }}
+<!-- {{ partial "testimonial.html" . }} -->
 
 {{ partial "call-to-action.html" . }}
 
