--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,7 +1,7 @@
 {{ with .Site.Params.banner }}
   {{ if .enable }}
   {{ "<!-- Site Hero Start -->" | safeHTML }}
-  <section class="site-hero">
+  <section class="site-hero" style="background-image: url('{{ .background_image }}');">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 mx-auto">
@@ -34,9 +34,9 @@
         </div>
       </div>
     </div>
-    <a href="#counter" class="site-hero-scroll scroll-to">
+    <!-- <a href="#counter" class="site-hero-scroll scroll-to">
       <img src="images/arrow-down.svg" alt="arrow-down">
-    </a>
+    </a> -->
   </section>
   {{ "<!-- Site Hero End -->" | safeHTML }}
   {{ end }}
