--- a/layouts/portfolio/single.html
+++ b/layouts/portfolio/single.html
@@ -21,7 +21,7 @@
             <a href="{{.NextInSection.Permalink}}">
               <span class="link-area">
                 <span data-text="Next Project">
-                  Next Project
+                  Следующий проект
                 </span>
               </span>
               <img src="{{ "images/to-top.svg" | absURL }}" alt="next project">
