--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -9,8 +9,8 @@
             <p>{{ .subtitle }}</p>
           </div>
         </div>
-        {{ range first 4 (where $.Site.RegularPages "Type" "portfolio") }}
-        <div class="col-lg-6 col-md-10 mx-auto">
+        {{ range first 3 (where $.Site.RegularPages "Type" "portfolio") }}
+        <div class="col-lg-4 col-md-10 mx-auto">
           <div class="site-project-item">
             <div class="site-project-item-thumb">
               <img src="{{ .Params.Image | absURL }}" alt="project-thumb">
@@ -18,13 +18,13 @@
             <div class="site-project-item-content">
               <span>{{ delimit .Params.category ", " }}</span>
               <h3>{{ .Title }}</h3>
-              <a href="{{ .Permalink }}" class="read-more">view project</a>
+              <a href="{{ .Params.Alink }}" class="read-more">детали</a>
             </div>
           </div>
         </div>
         {{ end }}
         <div class="col-12 text-center text-lg-left">
-          <a href="portfolio" class="site-project-cta">MORE WORKS</a>
+          <a href="portfolio" class="site-project-cta">больше работ</a>
         </div>
       </div>
     </div>
