--- a/assets/scss/components/_expertise.scss
+++ b/assets/scss/components/_expertise.scss
@@ -8,7 +8,7 @@
       margin: 0;
     }
     li{
-      list-style: none;
+      list-style: inside;
       font-size: 25px;
       font-weight: 300;
       color: $text-color-dark;
