--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -30,7 +30,7 @@
             <p>
               {{ .Summary }} ...
             </p>
-            <a href="{{ .Permalink }}" class="read-more">read more</a>
+            <a href="{{ .Permalink }}" class="read-more">Читать</a>
           </div>
         </article>
       </div>
