--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -18,7 +18,7 @@
             <div class="site-project-item-content">
               <span>{{ delimit .Params.category ", " }}</span>
               <h3>{{ .Title }}</h3>
-              <a href="{{ .Params.Alink }}" class="read-more">детали</a>
+              <a href="{{ .Params.Alink }}" target="_blank" class="read-more">детали</a>
             </div>
           </div>
         </div>
