--- a/layouts/portfolio/list.html
+++ b/layouts/portfolio/list.html
@@ -32,7 +32,7 @@
           <div class="site-project-item-content">
             <span>{{ delimit .Params.category ", " }}</span>
             <h3>{{ .Title }}</h3>
-            <a href="{{ .Params.Alink}}" class="read-more">перейти к проекту</a>
+            <a href="{{ .Params.Alink}}" target="_blank" class="read-more">перейти к проекту</a>
           </div>
         </div>
       </div>
