--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,7 +1,7 @@
 {{ with .Site.Params.banner }}
   {{ if .enable }}
   {{ "<!-- Site Hero Start -->" | safeHTML }}
-  <section class="site-hero" style="background-image: url('{{ .background_image }}');">
+  <section class="site-hero" >
     <div class="container">
       <div class="row">
         <div class="col-lg-10 mx-auto">
